# guethub

./: README.md  privacy_policy.md  pubspec.yaml
.github/workflows/: release_android.yaml
android/: gradle.properties
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: device_info.dart  logger.dart  main.dart
lib/common/encrypt/: webvpn_new.dart
lib/data/: network.dart  redirect_interceptor.dart
lib/data/database/: database.dart  database.g.dart
lib/data/device/: tracking.dart
lib/data/repository/: academy.dart  course.dart  empty_classroom_new.dart  exam_schedule_repository.dart  exam_scores.dart  experiment.dart  forum_repository.dart  login.dart  majors.dart  network_detection.dart  pedagogical_evaluation.dart  program_completion_info.dart  student_info.dart  (+3 more)
lib/map/: amap.dart
lib/ui/: route.dart
lib/util/: ext.dart  measure_time.dart  weeks_between.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust_module/: pubspec.yaml
rust_module/lib/: rust_module.dart
rust_module/macos/: rust_module.podspec
rust_module/rust/: Cargo.toml
rust_module/rust/src/: frb_generated.rs
rust_module/rust/src/api/: cfbcrypto.rs  mod.rs  rscrypto.rs
rust_module/rust/src/api/html_parser/: exam_schedule.rs  mod.rs  program_completion_info.rs
rust_module/rust/src/api/utils/: mod.rs  section_finder.rs
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+57 files in other folders)
