[package]
name = "rsmodule"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsmodule"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
hex = "0.4"
rand = "0.9.0"
base64 = "0.22.1"
aes="0.7.5"
block-modes="0.8.1"
cipher = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
