[package]
name = "rust_module"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_module"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
hex = "0.4"
rand = "0.9.0"
base64 = "0.22.1"
aes= "0.8.4"
cipher = { version = "0.4", features = ["block-padding"] }
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10.6"
chrono = "0.4.40"
once_cell = "1.21.1"
selectors = "0.26.0"
cbc = { version = "0.1.2", default-features = false, features = ["std", "alloc"] }
block-padding = "0.3.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
